--- a/first_follow.ipynb
+++ b/first_follow.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,12 +20,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [],
    "source": [
     "file_path = \"lib/input/\"\n",
-    "file_name = \"test_input.txt\"\n",
+    "file_name = \"test_video.txt\"\n",
+    "# file_name = \"example_1.txt\"\n",
     "try:\n",
     "    codigo_entrada = open(file_path + file_name, \"r\", encoding=\"utf8\").read()\n",
     "except:\n",
@@ -35,19 +36,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 296,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "simbolo_inicial = codigo_entrada[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 297,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "S -> aBDh\n",
-      "B -> cC\n",
-      "C -> bC | λ\n",
-      "D -> EF\n",
-      "E -> g | λ\n",
-      "F -> f | λ\n"
+      "S -> ACB | CbB | Ba\n",
+      "A -> da | BC\n",
+      "B -> g | λ\n",
+      "C -> h | λ\n",
+      "\n"
      ]
     }
    ],
@@ -57,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,16 +75,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6"
+       "5"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 299,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,23 +96,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['a', 'g', 'c', 'f', 'b', 'h']"
+       "['a', 'h', 'g', 'd', 'b']"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 300,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "### Encontrar\n",
-    "regex_terminais = r\"[a-z+:=*-]\"\n",
+    "regex_terminais = r\"[a-z+:=*-/]\"\n",
     "matches = re.finditer(regex_terminais, codigo_entrada.replace(\"->\",\" \"), re.MULTILINE)\n",
     "variaveis = []\n",
     "for match in matches:\n",
@@ -116,16 +125,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['C', 'D', 'E', 'S', 'B', 'F']"
+       "['A', 'B', 'C', 'S']"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 301,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,19 +152,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "S -> aBDh\n",
-      "B -> cC\n",
-      "C -> bC | λ\n",
-      "D -> EF\n",
-      "E -> g | λ\n",
-      "F -> f | λ\n"
+      "S -> ACB | CbB | Ba\n",
+      "A -> da | BC\n",
+      "B -> g | λ\n",
+      "C -> h | λ\n",
+      "\n"
      ]
     }
    ],
@@ -165,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,19 +182,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FIRST(S) = FIRST(aBDh)\n",
-      "FIRST(B) = FIRST(cC)\n",
-      "FIRST(C) = FIRST(bC) + FIRST(λ)\n",
-      "FIRST(D) = FIRST(EF)\n",
-      "FIRST(E) = FIRST(g) + FIRST(λ)\n",
-      "FIRST(F) = FIRST(f) + FIRST(λ)\n"
+      "FIRST(S) = FIRST(ACB) + FIRST(CbB) + FIRST(Ba)\n",
+      "FIRST(A) = FIRST(da) + FIRST(BC)\n",
+      "FIRST(B) = FIRST(g) + FIRST(λ)\n",
+      "FIRST(C) = FIRST(h) + FIRST(λ)\n"
      ]
     }
    ],
@@ -214,21 +220,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'S': ['aBDh'],\n",
-       " 'B': ['cC'],\n",
-       " 'C': ['bC', 'λ'],\n",
-       " 'D': ['EF'],\n",
-       " 'E': ['g', 'λ'],\n",
-       " 'F': ['f', 'λ']}"
+       "{'S': ['ACB', 'CbB', 'Ba'],\n",
+       " 'A': ['da', 'BC'],\n",
+       " 'B': ['g', 'λ'],\n",
+       " 'C': ['h', 'λ']}"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 305,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,33 +243,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Criar dicionário de first\n",
     "first_dict = production.copy()\n",
+    "follow_dict = production.copy()\n",
+    "follow_position = production.copy()\n",
     "for elem in first_dict:\n",
-    "    first_dict[elem] = []"
+    "    first_dict[elem] = []\n",
+    "    follow_dict[elem] = []\n",
+    "    follow_position[elem] = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'S': ['aBDh'],\n",
-       " 'B': ['cC'],\n",
-       " 'C': ['bC', 'λ'],\n",
-       " 'D': ['EF'],\n",
-       " 'E': ['g', 'λ'],\n",
-       " 'F': ['f', 'λ']}"
+       "{'S': ['ACB', 'CbB', 'Ba'],\n",
+       " 'A': ['da', 'BC'],\n",
+       " 'B': ['g', 'λ'],\n",
+       " 'C': ['h', 'λ']}"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 307,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,16 +282,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'S': [], 'B': [], 'C': [], 'D': [], 'E': [], 'F': []}"
+       "{'S': [], 'A': [], 'B': [], 'C': []}"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 308,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +302,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 309,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'S': [], 'A': [], 'B': [], 'C': []}"
+      ]
+     },
+     "execution_count": 309,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "follow_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 310,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +345,7 @@
     "\n",
     "    resultado = []\n",
     "\n",
-    "    if len(key) == 1:\n",
+    "    if len(key) == 1 and key in variaveis_nao_terminais:\n",
     "        if (len(first_dict[key]) != 0):\n",
     "            return first_dict[key]\n",
     "            \n",
@@ -357,6 +383,7 @@
     "        \n",
     "        # resultado.append(saida)\n",
     "        resultado = merge_lists(resultado,saida)\n",
+    "        print(resultado)\n",
     "    first_dict[key] = resultado\n",
     "    return resultado\n"
    ]
@@ -372,9 +399,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 312,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['d']\n",
+      "['g']\n",
+      "['g', 'λ']\n",
+      "['h']\n",
+      "['h', 'λ']\n",
+      "['g', 'λ', 'd', 'h']\n",
+      "['h', 'g', 'λ']\n",
+      "['g', 'λ', 'd', 'h']\n",
+      "['b']\n",
+      "['λ', 'h', 'g', 'd', 'b']\n",
+      "['a']\n",
+      "['a', 'λ', 'g', 'h', 'd', 'b']\n"
+     ]
+    }
+   ],
    "source": [
     "for variavel in production:\n",
     "    variavel_da_vez = variavel\n",
@@ -383,21 +429,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'S': ['aBDh'],\n",
-       " 'B': ['cC'],\n",
-       " 'C': ['bC', 'λ'],\n",
-       " 'D': ['EF'],\n",
-       " 'E': ['g', 'λ'],\n",
-       " 'F': ['f', 'λ']}"
+       "{'S': ['ACB', 'CbB', 'Ba'],\n",
+       " 'A': ['da', 'BC'],\n",
+       " 'B': ['g', 'λ'],\n",
+       " 'C': ['h', 'λ']}"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 313,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,16 +452,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "[['h', 'g', 'λ'], ['b'], ['a']]"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 314,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,25 +469,23 @@
    "source": [
     "### Remover chaves de tamanho maior que um\n",
     "\n",
-    "lista_chaves_desnecessarias = [key for key in first_dict if len(key) > 1]\n",
+    "lista_chaves_desnecessarias = [key for key in first_dict if len(key) > 1 or key in variaveis_terminais]\n",
     "[first_dict.pop(key) for key in lista_chaves_desnecessarias]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "S  :  ['aBDh']\n",
-      "B  :  ['cC']\n",
-      "C  :  ['bC', 'λ']\n",
-      "D  :  ['EF']\n",
-      "E  :  ['g', 'λ']\n",
-      "F  :  ['f', 'λ']\n"
+      "S  :  ['ACB', 'CbB', 'Ba']\n",
+      "A  :  ['da', 'BC']\n",
+      "B  :  ['g', 'λ']\n",
+      "C  :  ['h', 'λ']\n"
      ]
     }
    ],
@@ -454,19 +496,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 316,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['aABb', 'A']"
+      ]
+     },
+     "execution_count": 316,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "elem = 'A'\n",
+    "value = ['aABb','A']\n",
+    "lista_match = [parcela for parcela in value if elem in parcela]\n",
+    "lista_match"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 317,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def find_elements_in_prod(production):\n",
+    "    for key, value in production.items():        \n",
+    "        for elem in variaveis_nao_terminais:\n",
+    "            lista_match = [parcela for parcela in value if elem in parcela]\n",
+    "            follow_position[elem] = merge_lists(lista_match,follow_position[elem])  \n",
+    "\n",
+    "find_elements_in_prod(production)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 318,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "S  :  ['a']\n",
-      "B  :  ['c']\n",
-      "C  :  ['b', 'λ']\n",
-      "D  :  ['g', 'f', 'λ']\n",
-      "E  :  ['g', 'λ']\n",
-      "F  :  ['f', 'λ']\n"
+      "S  :  []\n",
+      "A  :  ['ACB']\n",
+      "B  :  ['CbB', 'BC', 'ACB', 'Ba']\n",
+      "C  :  ['CbB', 'BC', 'ACB']\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key, value in follow_position.items():\n",
+    "    print(key, ' : ', value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 319,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "S  :  ['a', 'λ', 'g', 'h', 'd', 'b']\n",
+      "A  :  ['g', 'λ', 'd', 'h']\n",
+      "B  :  ['g', 'λ']\n",
+      "C  :  ['h', 'λ']\n"
      ]
     }
    ],
@@ -474,6 +581,97 @@
     "for key, value in first_dict.items():\n",
     "    print(key, ' : ', value)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 320,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'S': [], 'A': [], 'B': [], 'C': []}"
+      ]
+     },
+     "execution_count": 320,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "follow_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 321,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-321-e6244399fcad>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-321-e6244399fcad>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    for key,\u001b[0m\n\u001b[1;37m             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "def find_elem_in_values(elem, prod):\n",
+    "    for key, "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aABb\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 234,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def follow_set(key):\n",
+    "    resultado = []\n",
+    "    \n",
+    "    if key == simbolo_inicial:\n",
+    "        resultado = merge_lists(resultado, \"$\") \n",
+    "    \n",
+    "    ### Achar na produção, onde existe a chave\n",
+    "\n",
+    "    for elem in follow_position[key]:\n",
+    "        print(elem)\n",
+    "\n",
+    "    return resultado\n",
+    "\n",
+    "\n",
+    "follow_set('A')\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
