Alterado Versões do First e Follow

--- a/first_follow.ipynb
+++ b/first_follow.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,12 +20,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def checar_dictionario(key, dict):\n",
+    "    check = key in dict\n",
+    "    if check:\n",
+    "        if len(dict[key])>0:\n",
+    "            return True\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
     "file_path = \"lib/input/\"\n",
-    "file_name = \"test_video.txt\"\n",
+    "\n",
+    "try:\n",
+    "    file_name = file_name_externo\n",
+    "except:\n",
+    "    file_name = \"input_a.txt\"\n",
     "# file_name = \"example_1.txt\"\n",
     "try:\n",
     "    codigo_entrada = open(file_path + file_name, \"r\", encoding=\"utf8\").read()\n",
@@ -36,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,50 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['g', 'h', 'b']"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "resultado = ['g', 'λ', 'h', 'b']\n",
-    "resultado.remove('λ')\n",
-    "resultado"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "S -> ACB | CbB | Ba\n",
-      "A -> da | BC\n",
-      "B -> g | λ\n",
-      "C -> h | λ\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(codigo_entrada)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,16 +72,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5"
+       "2"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,16 +93,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['h', 'd', 'g', 'b', 'a']"
+       "['b', 'd', 'c', 'a']"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,16 +122,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['A', 'C', 'B', 'S']"
+       "['S', 'D']"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,28 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "S -> ACB | CbB | Ba\n",
-      "A -> da | BC\n",
-      "B -> g | λ\n",
-      "C -> h | λ\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(codigo_entrada)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,17 +158,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FIRST(S) = FIRST(ACB) + FIRST(CbB) + FIRST(Ba)\n",
-      "FIRST(A) = FIRST(da) + FIRST(BC)\n",
-      "FIRST(B) = FIRST(g) + FIRST(λ)\n",
-      "FIRST(C) = FIRST(h) + FIRST(λ)\n"
+      "FIRST(S) = FIRST(aSbc) + FIRST(D)\n",
+      "FIRST(D) = FIRST(dD) + FIRST(d)\n"
      ]
     }
    ],
@@ -242,19 +194,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'S': ['ACB', 'CbB', 'Ba'],\n",
-       " 'A': ['da', 'BC'],\n",
-       " 'B': ['g', 'λ'],\n",
-       " 'C': ['h', 'λ']}"
+       "{'S': ['aSbc', 'D'], 'D': ['dD', 'd']}"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,19 +230,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'S': ['ACB', 'CbB', 'Ba'],\n",
-       " 'A': ['da', 'BC'],\n",
-       " 'B': ['g', 'λ'],\n",
-       " 'C': ['h', 'λ']}"
+       "{'S': ['aSbc', 'D'], 'D': ['dD', 'd']}"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,16 +250,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'S': [], 'A': [], 'B': [], 'C': []}"
+       "{'S': [], 'D': []}"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,16 +270,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'S': [], 'A': [], 'B': [], 'C': []}"
+       "{'S': [], 'D': []}"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,13 +304,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
     "def first_set(key):\n",
     "    ### Checar se já existe no dicionário \n",
-    "\n",
+    "    \n",
     "    resultado = []\n",
     "\n",
     "    if len(key) == 1 and key in variaveis_nao_terminais:\n",
@@ -405,32 +351,24 @@
     "        \n",
     "        # resultado.append(saida)\n",
     "        resultado = merge_lists(resultado,saida)\n",
-    "        print(resultado)\n",
+    "      \n",
     "    first_dict[key] = resultado\n",
     "    return resultado\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['d']\n",
-      "['g']\n",
-      "['g', 'λ']\n",
-      "['h']\n",
-      "['h', 'λ']\n",
-      "['g', 'h', 'd', 'λ']\n",
-      "['g', 'h', 'λ']\n",
-      "['g', 'h', 'd', 'λ']\n",
-      "['b']\n",
-      "['h', 'λ', 'd', 'b', 'g']\n",
       "['a']\n",
-      "['h', 'λ', 'd', 'a', 'b', 'g']\n"
+      "['d']\n",
+      "['d']\n",
+      "['d', 'a']\n"
      ]
     }
    ],
@@ -442,19 +380,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'S': ['ACB', 'CbB', 'Ba'],\n",
-       " 'A': ['da', 'BC'],\n",
-       " 'B': ['g', 'λ'],\n",
-       " 'C': ['h', 'λ']}"
+       "{'S': ['aSbc', 'D'], 'D': ['dD', 'd']}"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,61 +400,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "S  :  ['ACB', 'CbB', 'Ba']\n",
-      "A  :  ['da', 'BC']\n",
-      "B  :  ['g', 'λ']\n",
-      "C  :  ['h', 'λ']\n"
-     ]
-    }
-   ],
-   "source": [
-    "for key, value in production.items():\n",
-    "    print(key, ' : ', value)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "S  :  ['h', 'λ', 'd', 'a', 'b', 'g']\n",
-      "A  :  ['g', 'h', 'd', 'λ']\n",
-      "B  :  ['g', 'λ']\n",
-      "C  :  ['h', 'λ']\n",
-      "CB  :  ['g', 'h', 'λ']\n",
-      "bB  :  ['b']\n",
-      "a  :  ['a']\n"
-     ]
-    }
-   ],
-   "source": [
-    "for key, value in first_dict.items():\n",
-    "    print(key, ' : ', value)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'S': [], 'A': [], 'B': [], 'C': []}"
+       "{'S': [], 'D': []}"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,81 +420,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 157,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "S:ACB\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['$']"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def follow_set(key):\n",
     "  resultado = []\n",
     "  ### Achar elemento que contem key\n",
     "  for chave, valor in production.items():\n",
     "    for elem in valor:\n",
+    "      saida = []\n",
     "      if key == simbolo_inicial:\n",
     "          saida = \"$\"\n",
     "      if key in elem:\n",
-    "        ### Achou elemento que possui a key\n",
-    "        print(chave + ':' + elem)\n",
-    "        saida = []\n",
-    "\n",
+    "        ### Achou elemento que possui a key     \n",
     "        ### Se elemento estiver na posição final    \n",
     "        indice = elem.index(key)\n",
     "\n",
     "        palavra_restante = elem[indice + 1:]\n",
     "\n",
     "        if palavra_restante == '':\n",
-    "          saida = follow_set(simbolo_inicial)\n",
+    "            \n",
+    "          if checar_dictionario(chave,follow_dict):\n",
+    "                saida = follow_dict[chave]\n",
+    "          else:\n",
+    "            if key == chave:\n",
+    "                saida = [] \n",
+    "            else:\n",
+    "                saida = follow_set(chave)\n",
     "        else:\n",
-    "          saida = first_dict[palavra_restante]\n",
+    "            if checar_dictionario(palavra_restante,first_dict):\n",
+    "                saida = first_dict[palavra_restante]\n",
+    "            else:\n",
+    "                saida = first_set(palavra_restante)\n",
     "\n",
-    "        if (len(follow_dict[chave]) != 0):\n",
-    "          saida = follow_dict[chave]\n",
-    "        else:\n",
-    "          saida = follow_set(chave)    \n",
     "\n",
-    "      resultado = merge_lists(resultado,saida)\n",
+    "      resultado = merge_lists(resultado,saida)     \n",
+    "      if 'λ' in resultado: \n",
+    "          resultado.remove('λ')\n",
+    "          resultado = merge_lists(resultado,follow_set(chave))\n",
+    "           \n",
     "\n",
     "  follow_dict[key] = resultado\n",
     "  \n",
-    "  return resultado\n",
-    "\n",
-    "follow_set('A')"
+    "  return resultado"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "S:ACB\n",
-      "S:ACB\n",
-      "S:CbB\n",
-      "S:Ba\n",
-      "A:BC\n",
-      "S:ACB\n",
-      "S:CbB\n",
-      "A:BC\n"
+      "['b']\n"
      ]
     }
    ],
@@ -616,30 +487,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "S  :  ['$']\n",
-      "A  :  ['$']\n",
-      "B  :  ['$']\n",
-      "C  :  ['$']\n"
-     ]
-    }
-   ],
-   "source": [
-    "for key, value in follow_dict.items():\n",
-    "    print(key, ' : ', value)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['b']]"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "### Remover chaves de tamanho maior que um\n",
     "\n",
@@ -649,35 +517,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(columns=['Variavel', 'Producao', 'First', 'Follow'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"Variavel\"] = variaveis_nao_terminais"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def listToString(list):\n",
+    "    str = '{'\n",
+    "    for elem in list:\n",
+    "        str = str + elem + ','\n",
+    "\n",
+    "    str = str[:-1] + '}'\n",
+    "    return str\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n"
+      "S  :  ['aSbc', 'D']\n",
+      "D  :  ['dD', 'd']\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "for key, value in production.items():\n",
+    "    df.loc[df['Variavel'] == key, 'Producao'] = listToString(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "S  :  ['d', 'a']\n",
+      "D  :  ['d']\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key, value in first_dict.items():\n",
+    "    df.loc[df['Variavel'] == key, 'First'] = listToString(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "S  :  ['b', '$']\n",
+      "D  :  ['b', '$']\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key, value in follow_dict.items():\n",
+    "    df.loc[df['Variavel'] == key, 'Follow'] = listToString(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Variavel</th>\n",
+       "      <th>Producao</th>\n",
+       "      <th>First</th>\n",
+       "      <th>Follow</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>S</td>\n",
+       "      <td>{aSbc,D}</td>\n",
+       "      <td>{d,a}</td>\n",
+       "      <td>{b,$}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>D</td>\n",
+       "      <td>{dD,d}</td>\n",
+       "      <td>{d}</td>\n",
+       "      <td>{b,$}</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "''"
+       "  Variavel  Producao  First Follow\n",
+       "0        S  {aSbc,D}  {d,a}  {b,$}\n",
+       "1        D    {dD,d}    {d}  {b,$}"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "chave = 'S'\n",
-    "elem = 'ACB'\n",
-    "key = 'B'\n",
-    "\n",
-    "indice = elem.index(key)\n",
-    "print(indice)\n",
-    "elem[indice + 1:]"
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nome_arquivo_saida = f'lib/output/{file_name[:-3]}csv'\n",
+    "try:\n",
+    "    df.to_csv(nome_arquivo_saida, index = False)\n",
+    "except:\n",
+    "    print(\"Não pode salvar aquivo de saída\")"
    ]
   },
   {
