Criado Loop e Exceções para Gerar Arquivos

--- a/first_follow.ipynb
+++ b/first_follow.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +50,7 @@
     "try:\n",
     "    file_name = file_name_externo\n",
     "except:\n",
-    "    file_name = \"input_a.txt\"\n",
+    "    file_name = \"input_c.txt\"\n",
     "# file_name = \"example_1.txt\"\n",
     "try:\n",
     "    codigo_entrada = open(file_path + file_name, \"r\", encoding=\"utf8\").read()\n",
@@ -54,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +70,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "codigo_entrada = codigo_entrada.replace('id','i')\n",
+    "codigo_entrada = codigo_entrada.replace('num','n')\n",
+    "codigo_entrada = codigo_entrada.replace(':=','=')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,16 +90,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "4"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,23 +111,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['b', 'd', 'c', 'a']"
+       "['n', 'u', 'd', ':', 'm', '=', '+', 'i']"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "### Encontrar\n",
-    "regex_terminais = r\"[a-z+:=*-/]\"\n",
+    "regex_terminais = r\"[\\[\\]a-z+:=*-/;]\"\n",
     "matches = re.finditer(regex_terminais, codigo_entrada.replace(\"->\",\" \"), re.MULTILINE)\n",
     "variaveis = []\n",
     "for match in matches:\n",
@@ -122,16 +140,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Adicionar num\n",
+    "cond_num_1 = 'n' in variaveis_terminais\n",
+    "cond_num_2 = 'u' in variaveis_terminais\n",
+    "cond_num_3 = 'm' in variaveis_terminais\n",
+    "\n",
+    "if (cond_num_1 and cond_num_2 and cond_num_3):\n",
+    "    variaveis_terminais.remove('n')\n",
+    "    variaveis_terminais.remove('u')\n",
+    "    variaveis_terminais.remove('m')\n",
+    "    variaveis_terminais.append('n')\n",
+    "\n",
+    "### Adicionar id\n",
+    "cond_id_1 = 'i' in variaveis_terminais\n",
+    "cond_id_2 = 'd' in variaveis_terminais\n",
+    "\n",
+    "if (cond_id_1 and cond_id_2):\n",
+    "    variaveis_terminais.remove('i')\n",
+    "    variaveis_terminais.remove('d')\n",
+    "    variaveis_terminais.append('i')\n",
+    "\n",
+    "### Adicionar :=\n",
+    "cond_ponto_1 = ':' in variaveis_terminais\n",
+    "cond_ponto_2 = '=' in variaveis_terminais\n",
+    "\n",
+    "if (cond_ponto_1 and cond_ponto_2):\n",
+    "    variaveis_terminais.remove(':')\n",
+    "    variaveis_terminais.remove('=')\n",
+    "    variaveis_terminais.append('=')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['S', 'D']"
+       "['+', 'num', 'id', ':=']"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "variaveis_terminais"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['+', 'num', 'id', ':=']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "variaveis_terminais"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['S', 'X', 'E']"
+      ]
+     },
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,52 +259,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "FIRST(S) = FIRST(aSbc) + FIRST(D)\n",
-      "FIRST(D) = FIRST(dD) + FIRST(d)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "for line in codigo_entrada.splitlines():\n",
     "    left = line.split('->')[0].strip() \n",
     "    right = line.split('->')[1].strip()\n",
     "\n",
-    "    print(f\"FIRST({left}) = \", end=\"\")\n",
+    "    # print(f\"FIRST({left}) = \", end=\"\")\n",
     "    right\n",
     "    production[left] = []\n",
     "\n",
     "    for idx, right_part  in enumerate(right.split(\"|\")): \n",
     " \n",
     "        production[left].append(right_part.strip())\n",
-    "        if idx > 0:\n",
-    "            print(f\" + FIRST({right_part.strip()})\", end=\"\")\n",
-    "        else:\n",
-    "            print(f\"FIRST({right_part.strip()})\", end=\"\")        \n",
+    "    #     if idx > 0:\n",
+    "    #         print(f\" + FIRST({right_part.strip()})\", end=\"\")\n",
+    "    #     else:\n",
+    "    #         print(f\"FIRST({right_part.strip()})\", end=\"\")        \n",
     "\n",
-    "    print(\"\")\n",
+    "    # print(\"\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'S': ['aSbc', 'D'], 'D': ['dD', 'd']}"
+       "{'S': ['id := E'], 'E': ['idX', 'num'], 'X': ['+numX', '+idX', 'λ']}"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,67 +322,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'S': ['aSbc', 'D'], 'D': ['dD', 'd']}"
-      ]
-     },
-     "execution_count": 147,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "production"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'S': [], 'D': []}"
-      ]
-     },
-     "execution_count": 148,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "first_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'S': [], 'D': []}"
-      ]
-     },
-     "execution_count": 149,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "follow_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +381,7 @@
     "        value = [key]  \n",
     "\n",
     "    for elem in value:\n",
-    "\n",
+    "        saida = []\n",
     "        if (len(elem) == 1 and elem == key):\n",
     "            saida = []\n",
     "        if elem == 'λ':\n",
@@ -358,69 +417,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['a']\n",
-      "['d']\n",
-      "['d']\n",
-      "['d', 'a']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for variavel in production:\n",
     "    variavel_da_vez = variavel\n",
-    "    first_set(variavel)"
+    "    try:\n",
+    "        first_set(variavel)\n",
+    "    except Exception as e:\n",
+    "        print(\"Erro First: \", e)\n",
+    "        print(\"Variável: \", variavel_da_vez)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'S': ['aSbc', 'D'], 'D': ['dD', 'd']}"
-      ]
-     },
-     "execution_count": 153,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "production"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'S': [], 'D': []}"
-      ]
-     },
-     "execution_count": 156,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "follow_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,21 +498,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['b']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for variavel in production:\n",
     "    variavel_da_vez = variavel\n",
-    "    follow_set(variavel)"
+    "    try:\n",
+    "        follow_set(variavel)\n",
+    "    except Exception as e:\n",
+    "        print(\"Erro Follow: \", e)\n",
+    "        print(\"Variável: \", variavel_da_vez)"
    ]
   },
   {
@@ -494,20 +520,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['b']]"
-      ]
-     },
-     "execution_count": 159,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "### Remover chaves de tamanho maior que um\n",
     "\n",
@@ -517,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,18 +565,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "S  :  ['aSbc', 'D']\n",
-      "D  :  ['dD', 'd']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for key, value in production.items():\n",
     "    df.loc[df['Variavel'] == key, 'Producao'] = listToString(value)"
@@ -569,18 +575,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "S  :  ['d', 'a']\n",
-      "D  :  ['d']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for key, value in first_dict.items():\n",
     "    df.loc[df['Variavel'] == key, 'First'] = listToString(value)"
@@ -588,18 +585,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "S  :  ['b', '$']\n",
-      "D  :  ['b', '$']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for key, value in follow_dict.items():\n",
     "    df.loc[df['Variavel'] == key, 'Follow'] = listToString(value)"
@@ -607,73 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Variavel</th>\n",
-       "      <th>Producao</th>\n",
-       "      <th>First</th>\n",
-       "      <th>Follow</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>S</td>\n",
-       "      <td>{aSbc,D}</td>\n",
-       "      <td>{d,a}</td>\n",
-       "      <td>{b,$}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>D</td>\n",
-       "      <td>{dD,d}</td>\n",
-       "      <td>{d}</td>\n",
-       "      <td>{b,$}</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Variavel  Producao  First Follow\n",
-       "0        S  {aSbc,D}  {d,a}  {b,$}\n",
-       "1        D    {dD,d}    {d}  {b,$}"
-      ]
-     },
-     "execution_count": 208,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
