--- a/loop_first_follow.ipynb
+++ b/loop_first_follow.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,124 +20,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FIRST(S) = FIRST(aSbc) + FIRST(D)\n",
-      "FIRST(D) = FIRST(dD) + FIRST(d)\n",
-      "FIRST(S) = FIRST(aA) + FIRST(c)\n",
-      "FIRST(A) = FIRST(acA) + FIRST(b) + FIRST(S)\n"
-     ]
-    },
-    {
-     "ename": "RecursionError",
-     "evalue": "maximum recursion depth exceeded in comparison",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRecursionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\arauj\\Documents\\Nassau\\Periodo_7\\Compiladores\\First_Follow\\first_follow.ipynb\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mvariavel\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mproduction\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0mvariavel_da_vez\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mvariavel\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[0mfollow_set\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvariavel\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mc:\\Users\\arauj\\Documents\\Nassau\\Periodo_7\\Compiladores\\First_Follow\\first_follow.ipynb\u001b[0m in \u001b[0;36mfollow_set\u001b[1;34m(key)\u001b[0m\n\u001b[0;32m     22\u001b[0m                 \u001b[0msaida\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 24\u001b[1;33m                 \u001b[0msaida\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfollow_set\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mchave\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     25\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     26\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mchecar_dictionario\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpalavra_restante\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mfirst_dict\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "... last 1 frames repeated, from the frame below ...\n",
-      "\u001b[1;32mc:\\Users\\arauj\\Documents\\Nassau\\Periodo_7\\Compiladores\\First_Follow\\first_follow.ipynb\u001b[0m in \u001b[0;36mfollow_set\u001b[1;34m(key)\u001b[0m\n\u001b[0;32m     22\u001b[0m                 \u001b[0msaida\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 24\u001b[1;33m                 \u001b[0msaida\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfollow_set\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mchave\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     25\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     26\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mchecar_dictionario\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpalavra_restante\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mfirst_dict\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mRecursionError\u001b[0m: maximum recursion depth exceeded in comparison"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Erro no arquivo: input_b.txt -> maximum recursion depth exceeded in comparison\n",
-      "FIRST(S) = FIRST(id := E)\n",
-      "FIRST(E) = FIRST(E + num) + FIRST(E + id) + FIRST(id) + FIRST(num)\n"
-     ]
-    },
-    {
-     "ename": "RecursionError",
-     "evalue": "maximum recursion depth exceeded while calling a Python object",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRecursionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\arauj\\Documents\\Nassau\\Periodo_7\\Compiladores\\First_Follow\\first_follow.ipynb\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mvariavel\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mproduction\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0mvariavel_da_vez\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mvariavel\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[0mfirst_set\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvariavel\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mc:\\Users\\arauj\\Documents\\Nassau\\Periodo_7\\Compiladores\\First_Follow\\first_follow.ipynb\u001b[0m in \u001b[0;36mfirst_set\u001b[1;34m(key)\u001b[0m\n\u001b[0;32m     24\u001b[0m                 \u001b[0mcheck\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfirst_dict\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0melem\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 26\u001b[1;33m                 \u001b[0mcheck\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfirst_set\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0melem\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     27\u001b[0m             \u001b[1;31m### CHecar se o first já foi calculado FIRST T\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     28\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[1;34m'λ'\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcheck\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "... last 1 frames repeated, from the frame below ...\n",
-      "\u001b[1;32mc:\\Users\\arauj\\Documents\\Nassau\\Periodo_7\\Compiladores\\First_Follow\\first_follow.ipynb\u001b[0m in \u001b[0;36mfirst_set\u001b[1;34m(key)\u001b[0m\n\u001b[0;32m     24\u001b[0m                 \u001b[0mcheck\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfirst_dict\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0melem\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 26\u001b[1;33m                 \u001b[0mcheck\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfirst_set\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0melem\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     27\u001b[0m             \u001b[1;31m### CHecar se o first já foi calculado FIRST T\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     28\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[1;34m'λ'\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcheck\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mRecursionError\u001b[0m: maximum recursion depth exceeded while calling a Python object"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Erro no arquivo: input_c.txt -> maximum recursion depth exceeded while calling a Python object\n",
-      "FIRST(Z) = FIRST(dY)\n",
-      "FIRST(Y) = FIRST(XTY) + FIRST(λ)\n",
-      "FIRST(T) = FIRST(c) + FIRST(λ)\n",
-      "FIRST(X) = FIRST(T) + FIRST(λ)\n",
-      "FIRST(S) = FIRST([L]) + FIRST(a)\n",
-      "FIRST(L) = FIRST(EA)\n",
-      "FIRST(A) = FIRST(;EA) + FIRST(λ)\n",
-      "FIRST(E) = FIRST(XB)\n",
-      "FIRST(B) = FIRST(:FB) + FIRST(B)\n",
-      "FIRST(F) = FIRST(b) + FIRST(λ)\n",
-      "FIRST(X) = FIRST(F) + FIRST(c)\n"
-     ]
-    },
-    {
-     "ename": "UnboundLocalError",
-     "evalue": "local variable 'saida' referenced before assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\arauj\\Documents\\Nassau\\Periodo_7\\Compiladores\\First_Follow\\first_follow.ipynb\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mvariavel\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mproduction\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0mvariavel_da_vez\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mvariavel\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[0mfirst_set\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvariavel\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mc:\\Users\\arauj\\Documents\\Nassau\\Periodo_7\\Compiladores\\First_Follow\\first_follow.ipynb\u001b[0m in \u001b[0;36mfirst_set\u001b[1;34m(key)\u001b[0m\n\u001b[0;32m     41\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     42\u001b[0m         \u001b[1;31m# resultado.append(saida)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 43\u001b[1;33m         \u001b[0mresultado\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmerge_lists\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresultado\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0msaida\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     44\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     45\u001b[0m     \u001b[0mfirst_dict\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mresultado\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'saida' referenced before assignment"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Erro no arquivo: input_e.txt -> local variable 'saida' referenced before assignment\n",
-      "FIRST(E) = FIRST(a)\n",
-      "FIRST(E) = FIRST(TX)\n",
-      "FIRST(X) = FIRST(+TX) + FIRST(λ)\n",
-      "FIRST(T) = FIRST(FR)\n",
-      "FIRST(R) = FIRST(*FR) + FIRST(λ)\n",
-      "FIRST(F) = FIRST(P) + FIRST(-P)\n",
-      "FIRST(P) = FIRST([E]) + FIRST(x) + FIRST(y)\n"
-     ]
-    },
-    {
-     "ename": "UnboundLocalError",
-     "evalue": "local variable 'saida' referenced before assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\arauj\\Documents\\Nassau\\Periodo_7\\Compiladores\\First_Follow\\first_follow.ipynb\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mvariavel\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mproduction\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0mvariavel_da_vez\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mvariavel\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[0mfirst_set\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvariavel\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mc:\\Users\\arauj\\Documents\\Nassau\\Periodo_7\\Compiladores\\First_Follow\\first_follow.ipynb\u001b[0m in \u001b[0;36mfirst_set\u001b[1;34m(key)\u001b[0m\n\u001b[0;32m     24\u001b[0m                 \u001b[0mcheck\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfirst_dict\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0melem\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 26\u001b[1;33m                 \u001b[0mcheck\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfirst_set\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0melem\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     27\u001b[0m             \u001b[1;31m### CHecar se o first já foi calculado FIRST T\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     28\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[1;34m'λ'\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcheck\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\arauj\\Documents\\Nassau\\Periodo_7\\Compiladores\\First_Follow\\first_follow.ipynb\u001b[0m in \u001b[0;36mfirst_set\u001b[1;34m(key)\u001b[0m\n\u001b[0;32m     24\u001b[0m                 \u001b[0mcheck\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfirst_dict\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0melem\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 26\u001b[1;33m                 \u001b[0mcheck\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfirst_set\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0melem\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     27\u001b[0m             \u001b[1;31m### CHecar se o first já foi calculado FIRST T\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     28\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[1;34m'λ'\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcheck\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\arauj\\Documents\\Nassau\\Periodo_7\\Compiladores\\First_Follow\\first_follow.ipynb\u001b[0m in \u001b[0;36mfirst_set\u001b[1;34m(key)\u001b[0m\n\u001b[0;32m     24\u001b[0m                 \u001b[0mcheck\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfirst_dict\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0melem\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 26\u001b[1;33m                 \u001b[0mcheck\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfirst_set\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0melem\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     27\u001b[0m             \u001b[1;31m### CHecar se o first já foi calculado FIRST T\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     28\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[1;34m'λ'\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcheck\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\arauj\\Documents\\Nassau\\Periodo_7\\Compiladores\\First_Follow\\first_follow.ipynb\u001b[0m in \u001b[0;36mfirst_set\u001b[1;34m(key)\u001b[0m\n\u001b[0;32m     41\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     42\u001b[0m         \u001b[1;31m# resultado.append(saida)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 43\u001b[1;33m         \u001b[0mresultado\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmerge_lists\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresultado\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0msaida\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     44\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     45\u001b[0m     \u001b[0mfirst_dict\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mresultado\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'saida' referenced before assignment"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Erro no arquivo: input_g.txt -> local variable 'saida' referenced before assignment\n",
-      "FIRST(S) = FIRST(AT) + FIRST(TB)\n",
-      "FIRST(T) = FIRST(aTb) + FIRST(λ)\n",
-      "FIRST(A) = FIRST(aA) + FIRST(λ)\n",
-      "FIRST(B) = FIRST(bB) + FIRST(b)\n"
+      "Executando arquivo: input_a.txt\n",
+      "Executando arquivo: input_b.txt\n",
+      "Erro Follow:  maximum recursion depth exceeded in comparison\n",
+      "Variável:  S\n",
+      "Erro Follow:  maximum recursion depth exceeded while calling a Python object\n",
+      "Variável:  A\n",
+      "Executando arquivo: input_c.txt\n",
+      "Executando arquivo: input_d.txt\n",
+      "Executando arquivo: input_e.txt\n",
+      "Executando arquivo: input_f.txt\n",
+      "Erro Follow:  maximum recursion depth exceeded while calling a Python object\n",
+      "Variável:  E\n",
+      "Erro Follow:  maximum recursion depth exceeded while calling a Python object\n",
+      "Variável:  X\n",
+      "Executando arquivo: input_g.txt\n",
+      "Executando arquivo: input_h.txt\n"
      ]
     }
    ],
@@ -148,11 +53,19 @@
     "filenames = next(walk(file_path), (None, None, []))[2]\n",
     "for file_name_externo in filenames:\n",
     "    try:\n",
+    "        print(f'Executando arquivo: {file_name_externo}')\n",
     "        %run first_follow.ipynb\n",
     "    except Exception as e:\n",
     "        print(f'Erro no arquivo: {file_name_externo} -> {e}')\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
